# soar

./: Assignment_Interview.docx  README.md  SOAR - Part 1 Legacy Connector Analysis.docx  SOAR - Part 2 Migration Design.docx
soar_connector_project/: PART1_LEGACY_ANALYSIS.md  PART2_MIGRATION_DESIGN.md  PART3_SDK_IMPLEMENTATION.md  SOAR_Connector_Analysis_and_Migration.md
soar_connector_project/urlscan_io/: pyproject.toml
soar_connector_project/urlscan_io/src/: app.py  client.py
soar_connector_project/urlscan_io/src/actions/: detonate_url.py  get_report.py  get_screenshot.py  hunt_domain.py  hunt_ip.py
soar_connector_project/urlscan_io/src/models/: outputs.py  params.py
urlscan_fastapi/: .env.example  .gitignore  README.md  REFACTORING_SUMMARY.md  test_api.py
urlscan_fastapi/app/: __init__.py  main.py  requirements.txt  routes.py  run.py
urlscan_fastapi/app/actions/: __init__.py  detonate_url.py  get_report.py  lookup_domain.py
urlscan_fastapi/app/clients/: __init__.py  urlscan_client.py
urlscan_fastapi/app/core/: config.py
urlscan_fastapi/app/models/: schemas.py
urlscan_fastapi/app/services/: urlscan_client.py  urlscan_service.py
